добавил кнопку логаут, убрал нав бар

--- a/practiceApp/practiceApp/Base.lproj/Main.storyboard
+++ b/practiceApp/practiceApp/Base.lproj/Main.storyboard
@@ -85,10 +85,9 @@
         <!--Navigation Controller-->
         <scene sceneID="x8O-VX-y9S">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gzf-c5-hyM" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="gzf-c5-hyM" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="cNV-0O-Xp0">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -169,6 +168,16 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0hi-M9-vlr">
+                                <rect key="frame" x="156" y="783" width="82" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" systemColor="systemRedColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Log out"/>
+                                <connections>
+                                    <action selector="logOut:" destination="BhR-dC-NMO" eventType="touchUpInside" id="QYS-IL-kU9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0ez-QR-rKZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
